# CrewKB

./: .clinerules  .env.example  .gitignore  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  run_tests.sh  setup.py  test_knowledge_models.py  test_semantic_scholar.py
crewkb/: cli.py  config.py
crewkb/crews/: __init__.py  content_creation_crew.py  research_crew.py  review_crew.py
crewkb/flows/: __init__.py  knowledge_base_flow.py
crewkb/models/: article.py  sections.py
crewkb/storage/: json_storage.py  markdown_storage.py  storage_manager.py
crewkb/tests/: README.md  __init__.py
crewkb/tools/: README.md
crewkb/utils/: knowledge_directory.py  llm_factory.py  metrics_collector.py  mlflow_utils.py  setup.py  tool_factory.py
docs/: mlflow_integration.md
docs/crawl4ai/: advanced-advanced-features.md  advanced-crawl-dispatcher.md  advanced-file-downloading.md  advanced-hooks-auth.md  advanced-identity-based-crawling.md  advanced-lazy-loading.md  advanced-multi-url-crawling.md  advanced-network-console-capture.md  advanced-proxy-security.md  advanced-session-management.md  advanced-ssl-certificate.md  api-arun.md  api-arun_many.md  api-async-webcrawler.md  api-crawl-result.md  api-parameters.md  api-strategies.md  blog.md  core-browser-crawler-config.md  core-cache-modes.md  core-content-selection.md  core-crawler-result.md  (+11 more)
examples/: knowledge_example.py  pdf_processor_example.py  research_crew_example.py  search_coordinator_example.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+100 files in other folders)
